--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,8 @@
 .home {
   min-height: 100vh;
   width: 100%;
-  background: url('/Users/balajee/campuscart/public/Assets/shoes GIF.gif') center/cover no-repeat;
-  color: #333;
+  background: url('/Users/balajee/campuscart/public/Assets/download (1).png') center/cover no-repeat;
+  color: #303030;
   font-family: 'Arial', sans-serif;
   position: relative;
   display: flex;
@@ -56,7 +56,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.244);
   z-index: 1;
 }
 
@@ -76,7 +76,7 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease;
   z-index: 2;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 
