--- a/src/pages/ProductDetail.css
+++ b/src/pages/ProductDetail.css
@@ -68,7 +68,7 @@ background-color: rgb(45, 45, 45);
 }
 
 .borrow-button {
-background-color: #0d00fb; /* blue */
+background-color: #0d00fb; 
 color: white;
 padding: 0.5rem 1.2rem;
 border: none;
