--- a/src/pages/ProductDetail.css
+++ b/src/pages/ProductDetail.css
@@ -1,3 +1,24 @@
+.search-bar {
+    text-align: center;
+    margin-top: 70px;
+    /* margin-bottom: 20px; */
+}
+  
+.search-bar input {
+    width: 60%;
+    max-width: 400px;
+    padding: 0.6rem 1rem;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+    outline: none;
+    transition: border 0.3s ease;
+}
+  
+.search-bar input:focus {
+    border-color: #000;
+}
+  
 .product-card {
     width: 320px;
     border: 1px solid #ddd;
