--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 .home {
   min-height: 100vh;
   width: 100%;
-  background: url('/Users/balajee/campuscart/public/Assets/download.png') center/cover no-repeat;
+  background: url('/Assets/download.png') center/cover no-repeat;
   color: #303030;
   font-family: 'Arial', sans-serif;
   position: relative;
